# learning-fullstock-development

./: .gitignore  LICENSE
.github/workflows/: deploy.yml
client/: Dockerfile  package-lock.json  package.json
client/nginx/: nginx.conf
client/src/: App.tsx  index.css
k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-ingress.yaml  backend-secret.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-secret.yaml
k8s/docker/server/: Dockerfile  docker-compose.yml  server-config.env
server/: .env.development  .flake8  README.md  alembic.ini  app.db  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 7b3240fe7c75_create_admin_customer_orders.py
server/app/: ppppppp.py  wsgi.py
server/app/api/: deps.py
server/app/api/v1/router/: order.py
server/app/core/: config.py
server/app/db/: base.py  init_db.py  session.py
server/app/models/: order.py
server/app/repositories/: order.py
server/app/schemas/: order.py
server/app/services/: order.py
server/app/utils/: pagination.py
