[tool.poetry]
name = "admin-order-backend"
version = "0.1.0"
description = "Order backend service using FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]  # 确保 'app' 目录存在，且至少包含 '__init__.py'

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
orjson = "^3.10.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
